kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: website
